# akademia

./: metodyWirtualneDemo.cpp  notatki.txt
build-projListaDrzewo-Klon_Desktop_Qt_5_0_2_MinGW_32bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  projListaDrzewo.cbp
build-projListaDrzewo-Klon_Desktop_Qt_5_0_2_MinGW_32bit-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  projListaDrzewo.cbp
build-projListaDrzewo-Klon_Desktop_Qt_5_0_2_MinGW_32bit-Release/: CMakeCache.txt  Makefile  cmake_install.cmake  projListaDrzewo.cbp
cmake-gtest-master/: CMakeLists.txt
cmake-gtest-master/src/: binsearchtree.cpp  binsearchtree.h  example.cpp  example.hpp  list.h  main.cpp  rational.cpp  rational.h
cmake-gtest-master/test/: CMakeLists.txt  binsearchtree.cpp  example.cpp  list.cpp  main.cpp
cmake-gtest-master2/cmake-gtest-master/: CMakeLists.txt
cmake-gtest-master2/cmake-gtest-master/src/: algos.cpp  example.cpp  example.hpp  exceptions.cpp  guarantees.cpp  iters.cpp  main.cpp  rational.hpp  resources.cpp  templates.cpp
cmake-gtest-master2/cmake-gtest-master/src/io/: cstdio.cpp  exceptions.cpp  iostream.cpp  manips.cpp
cmake-gtest-master2/cmake-gtest-master/test/: CMakeLists.txt
cmake-gtest-refactor/: CMakeLists.txt
cmake-gtest-refactor/src/: Database.hpp  PersonData.hpp  Report.cpp  work.cpp
copy_files/: CMakeLists.txt  main.cpp
expressions/: CMakeLists.txt  expression.cpp  expression.h  main.cpp  visitor.cpp  visitor.h
fun_swap/: CMakeLists.txt  helper.cpp  helper.h  main.cpp  testy.h
lab1/: .directory  CMakeLists.txt  helper.cpp  helper.h  main.cpp  main.proc  main.s
lab2/: CMakeLists.txt.user.2e87802  main.cpp
lab4/: CMakeLists.txt
lab7/: CMakeLists.txt  main.cpp
listaDrzewoDab/: CMakeLists.txt  main.cpp
projListaDrzewo/: CMakeLists.txt  CMakeLists.txt.user.e539cdb  list.cpp  main.cpp  tests.h
proj_cwiczeniowy/: CMakeLists.txt  main.cpp  zmienna_extern.cpp
queue_test/: CMakeLists.txt  main.cpp  tst_dowolne.h
ulamki/: CMakeLists.txt  main.cpp  rational.cpp  rational.h
